# whisper

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  endeavour  main.py  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: docker-publish.yml  tag-on-version.yml
app/: main.py
app/preload/: preload_all.py
