[project]
name = "whisper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "ffmpeg-python>=0.2.0",
    "openai-whisper",
    "pydantic>=2.10.6",
    "python-multipart>=0.0.20",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "uvicorn[standard]>=0.34.0",
]

[tool.uv.sources]
openai-whisper = { git = "https://github.com/openai/whisper.git", rev = "517a43ecd132a2089d85f4ebc044728a71d49f6e" }
